deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php
  name: php
  namespace: vbulletin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - env:
          - name: DATABASE
            value: vbsuite
          - name: DBUSER
            value: root
          - name: DBPASSWORD
            valueFrom:
              secretKeyRef:
                key: 'mariadb-root-password'
                name: 'vbulletin'
          image: php:fpm
          imagePullPolicy: IfNotPresent
          name: php
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500m
          securityContext:
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: vbulletin
              mountPath: /var/www/html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 0
      terminationGracePeriodSeconds: 30
      volumes:
       - name: vbulletin
         persistentVolumeClaim:
           claimName: vbulletin
           readOnly: false
