php-fpm.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: vbulletin
  name: vbulletin
  namespace: vbulletin
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vbulletin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vbulletin
    spec:
      containers:
        - image: nginx:latest
          imagePullPolicy: IfNotPresent
          name: nginx
          resources:
            limits:
              cpu: 100m
              memory: 150Mi
            requests:
              cpu: 50m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - image: phpdockerio/php:8.1-fpm
          imagePullPolicy: IfNotPresent
          name: php
          resources:
            limits:
              cpu: 200m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
