lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-apache
    app.kubernetes.io/instance: vbulletin
  name: vbulletin-lb
  namespace: vbulletin
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.152.183.43
  clusterIPs:
  - 10.152.183.43
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30763
    port: 8080
  selector:
    app: php-apache
  type: LoadBalancer
