service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php
    app.kubernetes.io/instance: php
  name: php
  namespace: vbulletin
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    targetPort: 8080
    name: php-apache
  selector:
    app: php-apache
