ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "vbulletin"
  name: vbulletin
spec:
  ingressClassName: nginx
  rules:
  - host: vbulletin
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php 
            port:
              name: php
